--- a/result-21-01-10/size_effect.ipynb
+++ b/result-21-01-10/size_effect.ipynb
@@ -15,10 +15,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "df = pd.read_csv('sample1.txt', sep='\\s+')\n",
-    "df1 = pd.read_csv('sample2.txt', sep='\\s+')\n",
-    "df = pd.concat([df, df1])\n",
-    "df = df.reset_index().drop(columns=['index'])\n",
+    "df = pd.read_csv('data.txt', sep='\\s+')\n",
     "df.atom_list = df.atom_list.apply(lambda x: list(map(int, x.split(','))))\n",
     "df = df.reset_index().drop(columns=['index'])\n",
     "atom_dict = {\n",
@@ -40,7 +37,7 @@
     "for an, name in atom_dict.items():\n",
     "    df[name] = df.atom_list.apply(lambda x: x.count(an) / len(x))\n",
     "X = df[atom_dict.values()]\n",
-    "y = df.target"
+    "y = df.Stabilized"
    ]
   },
   {
@@ -66,14 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9150943396226415 0.7701388888888888\n"
+      "0.8975609756097561 0.7854317165462676\n"
      ]
     }
    ],
